:bug: Fixed text overflow in doorman card

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -840,6 +840,8 @@ ul.actions {
 
   &.style2 {
     min-height: 25.5em;
+    overflow: hidden;
+    text-overflow: ellipsis;
     h3 {
       margin-bottom: 0.25em;
     }
@@ -854,7 +856,7 @@ ul.actions {
       top: 2em;
       margin: -4em 0 4em -4em;
       width: auto;
-      max-height: 10px;
+      max-height: 283px;
       @include breakpoint("<=medium") {
         max-height: 225px;
       }
